--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
 
       <input type="text" name="firstnumber" id="firstnumber" />
       <select name="operator" id="operator">
+        <!-- I know, not great, but it works! -->
+        <option value="default">Select operator</option>
         <option value="add">+</option>
         <option value="sub">-</option>
         <option value="mul">*</option>
